# authentify

./: ARCHITECTURE.md  Cargo.toml  README.md  debug-auth.js  debug-login.js  debug-user.js  fix-ash09-password.js  lib.rs  readme.md  reset-user.js  setup-guide.md  simple-test.js  test-api.js  test-ash09.js  test-complete-flow.js  test-fresh-login.js  test-integration.js  test-new-user.js  test-register-and-sdk.js  test-with-browser-token.html
backend/: .gitignore  README.md  contract-metadata.json  package.json
backend/database/migrations/: add_username_column.sql  create_sdk_clients_table.sql
backend/scripts/: create-sdk-tables.sql  migrate-database.js
backend/src/: server.ts
backend/src/config/: contract.config.ts  environment.config.ts  supabase.config.ts
backend/src/controllers/: auth.controller.ts  (+5 more)
contract/: .gitignore  Cargo.toml  README.md  lib.rs  rust-toolchain.toml
contract/scripts/: deploy.sh  run_tests.sh
frontend/: .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-auth.ts  use-contract.ts  use-wallet.ts
scripts/: build.sh  test.sh  test_contract_functions.sh  verify_all_functions.sh
sdk/: .gitignore  README.md  authentify-sdk-1.0.3.tgz  package-lock.json  package.json  rollup.config.js  test-build.js  tsconfig.json
sdk/examples/: basic-usage.js
sdk/public/: contract-metadata.json
sdk/src/: client.ts  constants.ts  contract.ts  index.ts  sdk.ts  types.ts  utils.ts
tests/: integration.rs
(+73 files in other folders)
