[package]
name = "authentify-contract"
version = "1.0.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
license = "MIT"
description = "Authentify - Web3 Authentication Layer for Polkadot"
repository = "https://github.com/yourusername/authentify"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
overflow-checks = false